--- a/sort.html
+++ b/sort.html
@@ -14,7 +14,7 @@
 			{
 				document.write(a[i]+" ");
 			}
-			a.sort(function(a,b){ return a-b});
+			a.sort(function();
 			document.write("<br>After sorting(in reverse):<br>")
 			document.write();
 			for(let i=n-1;i>=0;i--)
